[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
ratatui = "0.29.0"
color-eyre ="0.6.3"
crossterm = "0.29.0"
rand = { version = "0.9.1", features = [] }

[profile.release]
opt-level = "z"         # Optimize for size ("z" is more aggressive than "s")
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallelism to improve size
strip = true            # Remove symbols
panic = "abort"         # Smaller than "unwind" (if unwinding is not needed)