[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
color-eyre ="0.6.3"
crossterm = "0.29.0"
rand = { version = "0.9.1", features = [] }
arrayvec = "0.7.6"
bincode = "2.0.1"


[profile.release]
opt-level = "z"         # Optimize for size ("z" is more aggressive than "s")
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallelism to improve size
strip = true            # Remove symbols
panic = "abort"         # Smaller than "unwind" (if unwinding is not needed)